--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     --background-color: #E4E4E4;
     --light-gray: #D9D9D9;
     --text-color: #000000;
+    --text-light-color: #8b8b8b;
     --border-radius: 5px;
 }
 h1{
@@ -36,4 +37,7 @@ h5{
     align-items: center;
     justify-content: center;
     box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+}
+.text-light-color{
+    color: var(--text-light-color);
 }
