--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@
     --primary-color: #0D2A4C;
     --secondary-color: #0277FF;
     --background-color: #E4E4E4;
-    --light-gray: #D9D9D9;
+    --light-gray: #00000018;
     --text-color: #000000;
-    --text-light-color: #8b8b8b;
     --border-radius: 5px;
 }
 h1{
     font-size: 3rem;
     color: var(--text-color);
+    letter-spacing: 0.03rem;
 }
 h5{
     font-size: 1.3rem;
@@ -31,13 +31,24 @@ h5{
 .icon-bg {
     background: #fff;
     border-radius: 50%;
-    width: 48px;
-    height: 48px;
+    width: 56px;
+    height: 56px;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+    flex-shrink: 0;
 }
-.text-light-color{
-    color: var(--text-light-color);
+.icon-bg svg {
+    width: 60%;
+    height: 60%;
+    display: block;
+}
+
+.legend-dot {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    margin-right: 4px;
 }
