--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 :root{
     --primary-color: #0D2A4C;
     --secondary-color: #0277FF;
+    --third-color: #0D2A4C;
     --background-color: #E4E4E4;
     --light-gray: #00000018;
     --text-color: #000000;
@@ -51,4 +52,53 @@ h5{
     height: 16px;
     border-radius: 50%;
     margin-right: 4px;
+}
+
+main {
+    padding-bottom: 80px; 
+}
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 16px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0 -4px 5px -1px;
+}
+footer svg{
+    width: 2rem;
+    height: 2rem;
+}
+.icon-active {
+    color: var(--secondary-color);
+   
+}
+.icon-add-card {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+    background-color: var(--third-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icon-footer-bg {
+    /* Define o tamanho do círculo de fundo */
+    width: 3rem; 
+    height: 2.3rem;
+    
+    /* Cor de fundo (coloquei um azul claro baseado na sua imagem) */
+    background-color: #e6f0fa; 
+    
+    /* Transforma em círculo */
+    border-radius: 30%;
+    
+    /* Centraliza o SVG dentro do círculo usando Flexbox */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
