ajusta cor de fundo

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --secondary-color: #0277FF;
     --third-color: #0D2A4C;
     --background-color: #E4E4E4;
-    --light-gray: #00000018;
+    --light-gray: #f1f1f1;
     --text-color: #000000;
     --border-radius: 5px;
 }
